Refactor code to use modern Java features
Code has been updated across multiple files to use more modern Java features. These changes include modifying loops and if statements to use streams, replacing a ArrayList with List.of() for immutability, introducing new record PersonRecord, and updating error logging in LazyStreams. This code cleanup improves readability and makes better use of Java's capabilities.